# theinbox

./: .gitignore  CHANGE_LOG.md  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/: settings.local.json
ADR/: performance.md
docs/: publish.md
roadmap/: phase1.md  phase2.md  phase3-frontend.md  phase3.md  phase4.md
scripts/: release.sh
src/: App.vue  main.ts  types.ts  updateDialog.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  filters.rs  gmail.rs  lib.rs  mail.rs  main.rs
src-tauri/src/storage/: mod.rs
src/assets/: main.css
src/components/: EmailDetail.vue  EmailList.vue  FilterList.vue  FilterModal.vue  SettingsModal.vue
src/components/ui/: badge.vue  button.vue  checkbox.vue  input.vue  scroll-area.vue  separator.vue
