[package]
name = "inboxcleanup"
version = "0.1.0"
description = "A macOS app to filter and bulk-mark emails as read"
authors = ["you"]
edition = "2021"

[lib]
name = "inboxcleanup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
tokio = { version = "1", features = ["rt", "sync"] }
window-vibrancy = "0.5"
